--- a/topic01-overview-and-tools/book-a-android-tools-01/index.html
+++ b/topic01-overview-and-tools/book-a-android-tools-01/index.html
@@ -140,9 +140,7 @@ h3
   
   <div  class="ui tab segment lab" data-tab="Android-Tools-01">
     <h1>Objectives</h1>
-<p>Here we discuss how to install and set up effective tools for Android application development. These include the Android Studio IDE  + an emulator. The emulator we hope to use - Genymotion - is a third party application not strictly part of the android build tools. Optionally, in some cases, we may use an emulator that is included as part of Android Studio installation although this may prove significantly slower than Genymotion. It may not be possible to use an emulator in some environments and in such cases it shall be necessary to test on a physical device such as a phone or tablet.</p>
-<p>The associated practical labs for this (and all) sections can be found <a href="https://www.gitbook.com/book/ddrohan/mobile-app-dev-labs/details">here</a>.</p>
-<p>Alternatively you can follow the detailed instructions for the lab in the relevant section.</p>
+<p>Here we discuss how to install and set up effective tools for Android application development. These include the Android Studio IDE  + an emulator. The emulator we hope to use - Genymotion - is a third party application not strictly part of the android build tools. Optionally, in some cases, we may use an emulator that is included as part of Android Studio installation although this may prove significantly slower than Genymotion. It may not be possible to use an emulator in some environments and in such cases it shall be necessary to test on a physical device such as a phone or tablet.The associated practical labs for this (and all) sections can be found -<a href="https://www.gitbook.com/book/ddrohan/mobile-app-dev-labs/details">here</a>.Alternatively you can follow the detailed instructions for the lab in the relevant section.</p>
 
   </div>
  
