--- a/topic01-overview-and-tools/book-a-labs/index.html
+++ b/topic01-overview-and-tools/book-a-labs/index.html
@@ -100,8 +100,8 @@ h3
   </header>
   <div class="right tab-menu menu">
     
-      <a class="item" data-tab="labs">
-        labs
+      <a class="item" data-tab="CoffeeMate Labs">
+        CoffeeMate Labs
       </a>
     
       <a class="item" data-tab="01">
@@ -114,7 +114,7 @@ h3
 <br><br>
 
   
-  <div  class="ui tab segment lab" data-tab="labs">
+  <div  class="ui tab segment lab" data-tab="CoffeeMate Labs">
     <h1>CoffeeMate Labs</h1>
 <p>Here we discuss how to install and set up effective tools for Android application development. These include the Android Studio IDE  + an emulator. The emulator we hope to use - Genymotion - is a third party application not strictly part of the android build tools. Optionally, in some cases, we may use an emulator that is included as part of Android Studio installation although this may prove significantly slower than Genymotion. It may not be possible to use an emulator in some environments and in such cases it shall be necessary to test on a physical device such as a phone or tablet.</p>
 
