--- a/topic01-overview-and-tools/index.html
+++ b/topic01-overview-and-tools/index.html
@@ -152,7 +152,7 @@ figcaption
   <a class="ui raised link card" href="book-a-labs/index.html">
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
-        <div class="header"> labs </div>
+        <div class="header"> CoffeeMate Labs </div>
     </div>
     <div class="image">
       <img class="ui bordered rounded image" src="book-a-labs/img/main.png">
