--- a/topic01-overview-and-tools/indexmoodle.html
+++ b/topic01-overview-and-tools/indexmoodle.html
@@ -100,7 +100,7 @@ figcaption
   <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/book-a-labs/index.html">
     <div class="content">
         <div class="right floated meta"> <i class="lab large icon"></i></div>
-        <div class="header"> labs </div>
+        <div class="header"> CoffeeMate Labs </div>
     </div>
     <div class="image">
       <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/book-a-labs/img/main.png">
