UI Design updates

--- a/index.html
+++ b/index.html
@@ -105,7 +105,25 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. The first application we will build exhibits range of new concepts you will not have come across before. Here we tour this app in detail, exploring each of the artifacts we have composed, and attempt to get a sense of how they fit together to form a running app.</p>
+         <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. The first application we will build exhibits a range of new concepts you may not have come across before. Here we tour this app in detail, exploring each of the artifacts we have composed, and attempt to get a sense of how they fit together to form a running app.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
+  
+  <a class="ui raised link card" href="./topic02-ui-design/index.html">
+    <div class="content">
+        <div class="right floated meta"> <i class="sitemap large icon"></i></div>
+        <div class="header"> 2: UI Design </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="./topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. The first application we will build exhibits a range of new concepts you may not have come across before. Here we tour this app in detail, exploring each of the artifacts we have composed, and attempt to get a sense of how they fit together to form a running app.</p>
 
       </div>
     </div>
