--- a/talkwall.html
+++ b/talkwall.html
@@ -146,6 +146,42 @@ figcaption
   </a>
 
   
+  
+  <a class="ui raised link card" href="topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.pdf">
+    <div class="content">
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> UI Design - Part 1 </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Here we discuss app design in general, the frameworks available to the app developer and the different approaches that can be followed in the design and development of a mobile app.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
+  
+  <a class="ui raised link card" href="topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.pdf">
+    <div class="content">
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> UI Design - Part 2 </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Here we explore the general context of the android User Experience, it&#39;s role in the mobile platform space and the components that make up the the system. We are particularly interested in the version numbers and how version in general is managed.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
 </div>
 
 
