UI Design updates

--- a/topic02-ui-design/indexmoodle.html
+++ b/topic02-ui-design/indexmoodle.html
@@ -49,7 +49,7 @@ figcaption
         <div class="header"> UI Design - Part 1 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.png">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.jpg">
     </div>
     <div class="content">
       <div class="description">
