--- a/topic02-ui-design/index.html
+++ b/topic02-ui-design/index.html
@@ -101,7 +101,7 @@ figcaption
         <div class="header"> UI Design - Part 1 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-1-ui-design-1/01.ui.design.1.png">
+      <img class="ui bordered rounded image" src="talk-1-ui-design-1/01.ui.design.1.jpg">
     </div>
     <div class="content">
       <div class="description">
