--- a/topic02-ui-design/indexmoodle.html
+++ b/topic02-ui-design/indexmoodle.html
@@ -67,7 +67,7 @@ figcaption
         <div class="header"> UI Design - Part 2 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.png">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.jpg">
     </div>
     <div class="content">
       <div class="description">
