--- a/talkwall.html
+++ b/talkwall.html
@@ -171,7 +171,7 @@ figcaption
         <div class="header"> UI Design - Part 2 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.png">
+      <img class="ui bordered rounded image" src="topic02-ui-design/talk-2-ui-design-2/01.ui.design.2.jpg">
     </div>
     <div class="content">
       <div class="description">
