--- a/topic02-ui-design/index.html
+++ b/topic02-ui-design/index.html
@@ -119,7 +119,7 @@ figcaption
         <div class="header"> UI Design - Part 2 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-2-ui-design-2/01.ui.design.2.png">
+      <img class="ui bordered rounded image" src="talk-2-ui-design-2/01.ui.design.2.jpg">
     </div>
     <div class="content">
       <div class="description">
