--- a/index.html
+++ b/index.html
@@ -166,6 +166,24 @@ figcaption
   </a>
 
   
+  
+  <a class="ui raised link card" href="./topic05-labs/index.html">
+    <div class="content">
+        <div class="right floated meta"> <i class="sitemap large icon"></i></div>
+        <div class="header"> 5: Practical Labs </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="./topic05-labs/talk-1-labs/coffeemate.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. The first application we will build exhibits a range of new concepts you may not have come across before. Here we tour this app in detail, exploring each of the artifacts we have composed, and attempt to get a sense of how they fit together to form a running app.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
 
 </div>
 
