--- a/talkwall.html
+++ b/talkwall.html
@@ -272,6 +272,24 @@ figcaption
   </a>
 
   
+  
+  <a class="ui raised link card" href="topic05-labs/talk-1-labs/coffeemate.pdf">
+    <div class="content">
+        <div class="right floated meta"> <i class="film large icon"></i></div>
+        <div class="header"> CoffeMate Practical Labs </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="topic05-labs/talk-1-labs/coffeemate.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Here we discuss app design in general, the frameworks available to the app developer and the different approaches that can be followed in the design and development of a mobile app.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
 </div>
 
 
