--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ figcaption
         <div class="header"> 2: UI Design </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="./topic02-ui-design/talk-1-ui-design-1/null">
+      <img class="ui bordered rounded image" src="./topic02-ui-design/talk-1-ui-design-1/01.ui.design.1.jpg">
     </div>
     <div class="content">
       <div class="description">
@@ -137,7 +137,7 @@ figcaption
         <div class="header"> 3: Multithreading & Networking </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="./topic03-networking/talk-1-networking-1/null">
+      <img class="ui bordered rounded image" src="./topic03-networking/talk-1-networking-1/01.networking.1.png">
     </div>
     <div class="content">
       <div class="description">
@@ -155,7 +155,7 @@ figcaption
         <div class="header"> 4: Google Services </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="./topic04-google-services/talk-1-google-1/null">
+      <img class="ui bordered rounded image" src="./topic04-google-services/talk-1-google-1/01.google.plus.jpg">
     </div>
     <div class="content">
       <div class="description">
