--- a/topic02-ui-design/index.html
+++ b/topic02-ui-design/index.html
@@ -95,34 +95,36 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="talk-1-ui-design-1/error: missing pdf">
+  <a class="ui raised link card" href="talk-1-ui-design-1/01.ui.design.1.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> error: missing pdf </div>
+        <div class="header"> UI Design - Part 1 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-1-ui-design-1/null">
+      <img class="ui bordered rounded image" src="talk-1-ui-design-1/01.ui.design.1.jpg">
     </div>
     <div class="content">
       <div class="description">
-         
+         <p>Here we discuss app design in general, the frameworks available to the app developer and the different approaches that can be followed in the design and development of a mobile app.</p>
+
       </div>
     </div>
   </a>
 
   
   
-  <a class="ui raised link card" href="talk-2-ui-design-2/error: missing pdf">
+  <a class="ui raised link card" href="talk-2-ui-design-2/01.ui.design.2.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> error: missing pdf </div>
+        <div class="header"> UI Design - Part 2 </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-2-ui-design-2/null">
+      <img class="ui bordered rounded image" src="talk-2-ui-design-2/01.ui.design.2.jpg">
     </div>
     <div class="content">
       <div class="description">
-         
+         <p>Here we explore the general context of the android User Experience, it&#39;s role in the mobile platform space and the components that make up the the system. We are particularly interested in the version numbers and how version in general is managed.</p>
+
       </div>
     </div>
   </a>
