--- a/topic03-networking/indexmoodle.html
+++ b/topic03-networking/indexmoodle.html
@@ -43,34 +43,36 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic03-networking/talk-1-networking-1/error: missing pdf">
+  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic03-networking/talk-1-networking-1/01.networking.1.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> error: missing pdf </div>
+        <div class="header"> Networking with Volley </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic03-networking/talk-1-networking-1/null">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic03-networking/talk-1-networking-1/01.networking.1.png">
     </div>
     <div class="content">
       <div class="description">
-         
+         <p>Here we discuss app design in general, the frameworks available to the app developer and the different approaches that can be followed in the design and development of a mobile app.</p>
+
       </div>
     </div>
   </a>
 
   
   
-  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic03-networking/talk-2-networking-2/error: missing pdf">
+  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic03-networking/talk-2-networking-2/01.ui.design.2.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> error: missing pdf </div>
+        <div class="header"> Recap on JSON </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic03-networking/talk-2-networking-2/null">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic03-networking/talk-2-networking-2/01.ui.design.2.jpg">
     </div>
     <div class="content">
       <div class="description">
-         
+         <p>Here we explore the general context of the android User Experience, it&#39;s role in the mobile platform space and the components that make up the the system. We are particularly interested in the version numbers and how version in general is managed.</p>
+
       </div>
     </div>
   </a>
