--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ figcaption
     </div>
     <div class="content">
       <div class="description">
-         <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. The first application we will build exhibits a range of new concepts you may not have come across before. Here we tour this app in detail, exploring each of the artifacts we have composed, and attempt to get a sense of how they fit together to form a running app.</p>
+         <p>Here we discuss app design in general, the frameworks available to the app developer and the different approaches that can be followed in the design and development of a mobile app. We begin with some of the more common widgets and complete the material with some of the more advanced UI artifacts used in the design of android apps, focusing on the android UI guidelines for effective navigation.</p>
 
       </div>
     </div>
