--- a/topic03-networking/index.html
+++ b/topic03-networking/index.html
@@ -113,13 +113,13 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="talk-2-networking-2/01.ui.design.2.pdf">
+  <a class="ui raised link card" href="talk-2-networking-2/json.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Recap on JSON </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-2-networking-2/01.ui.design.2.jpg">
+      <img class="ui bordered rounded image" src="talk-2-networking-2/json.gif">
     </div>
     <div class="content">
       <div class="description">
