--- a/topic01-overview-and-tools/index.html
+++ b/topic01-overview-and-tools/index.html
@@ -137,7 +137,7 @@ figcaption
         <div class="header"> Android Anatomy </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-3-android-anatomy/anatomy.png">
+      <img class="ui bordered rounded image" src="talk-3-android-anatomy/anatomy.jpg">
     </div>
     <div class="content">
       <div class="description">
