--- a/topic01-overview-and-tools/indexmoodle.html
+++ b/topic01-overview-and-tools/indexmoodle.html
@@ -85,7 +85,7 @@ figcaption
         <div class="header"> Android Anatomy </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/talk-3-android-anatomy/anatomy.png">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/talk-3-android-anatomy/anatomy.jpg">
     </div>
     <div class="content">
       <div class="description">
