--- a/talkwall.html
+++ b/talkwall.html
@@ -135,7 +135,7 @@ figcaption
         <div class="header"> Android Anatomy </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="topic01-overview-and-tools/talk-3-android-anatomy/anatomy.png">
+      <img class="ui bordered rounded image" src="topic01-overview-and-tools/talk-3-android-anatomy/anatomy.jpg">
     </div>
     <div class="content">
       <div class="description">
