--- a/talkwall.html
+++ b/talkwall.html
@@ -240,7 +240,7 @@ figcaption
   <a class="ui raised link card" href="topic04-google-services/talk-1-google-1/01.google.plus.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> Google+ Integration </div>
+        <div class="header"> Google+ Sign-in Integration </div>
     </div>
     <div class="image">
       <img class="ui bordered rounded image" src="topic04-google-services/talk-1-google-1/01.google.plus.jpg">
