--- a/topic04-google-services/index.html
+++ b/topic04-google-services/index.html
@@ -98,7 +98,7 @@ figcaption
   <a class="ui raised link card" href="talk-1-google-1/01.google.plus.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
-        <div class="header"> Google+ Integration </div>
+        <div class="header"> Google+ Sign-in Integration </div>
     </div>
     <div class="image">
       <img class="ui bordered rounded image" src="talk-1-google-1/01.google.plus.jpg">
