--- a/topic05-labs/indexmoodle.html
+++ b/topic05-labs/indexmoodle.html
@@ -43,17 +43,17 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic05-labs/talk-1-labs/coffeemate.pdf">
+  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic05-labs/talk-1-labs/labs.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Practical Labs </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic05-labs/talk-1-labs/coffeemate.png">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic05-labs/talk-1-labs/labs.png">
     </div>
     <div class="content">
       <div class="description">
-         <p>To support the lecture material and give the reader an opportunity to experiment with Android development, these labs are built around a single Case Study - <strong>CoffeeMate</strong> - where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features such as Google Sign-in, Location Services and Maps.</p>
+         <p>To support the lecture material and give the reader an opportunity to experiment with Java development, these labs are built around a single Case Study where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features.</p>
 
       </div>
     </div>
