--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@ figcaption
   <a class="ui raised link card" href="./topic05-labs/index.html">
     <div class="content">
         <div class="right floated meta"> <i class="sitemap large icon"></i></div>
-        <div class="header"> 5: Practical Labs </div>
+        <div class="header">  Practical Labs </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="./topic05-labs/talk-1-labs/coffeemate.png">
+      <img class="ui bordered rounded image" src="./topic05-labs/talk-1-labs/labs.png">
     </div>
     <div class="content">
       <div class="description">
-         <p>To support the lecture material and give the reader an opportunity to experiment with Android development, these labs are built around a single Case Study - <strong>CoffeeMate</strong> - where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features such as Google Sign-in, Location Services and Maps.</p>
+         <p>To support the lecture material and give the reader an opportunity to experiment with this type of development, these labs are built around a single Case Study where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features available.</p>
 
       </div>
     </div>
