--- a/topic05-labs/index.html
+++ b/topic05-labs/index.html
@@ -58,7 +58,7 @@ figcaption
 
   <header class="ui middle aligned center aligned stackable grid segment">
     <div class="eight wide  column">
-      <h2> 5: Practical Labs </h2>
+      <h2>  Practical Labs </h2>
       <!--<h3> () </h3>-->
     </div>
     <div class="one wide column sitemap">
@@ -95,17 +95,17 @@ figcaption
 
   
   
-  <a class="ui raised link card" href="talk-1-labs/coffeemate.pdf">
+  <a class="ui raised link card" href="talk-1-labs/labs.pdf">
     <div class="content">
         <div class="right floated meta"> <i class="film large icon"></i></div>
         <div class="header"> Practical Labs </div>
     </div>
     <div class="image">
-      <img class="ui bordered rounded image" src="talk-1-labs/coffeemate.png">
+      <img class="ui bordered rounded image" src="talk-1-labs/labs.png">
     </div>
     <div class="content">
       <div class="description">
-         <p>To support the lecture material and give the reader an opportunity to experiment with Android development, these labs are built around a single Case Study - <strong>CoffeeMate</strong> - where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features such as Google Sign-in, Location Services and Maps.</p>
+         <p>To support the lecture material and give the reader an opportunity to experiment with Java development, these labs are built around a single Case Study where the labs begin with some relatively basic functionality and steadily progress with the implementation of some of the more advanced features.</p>
 
       </div>
     </div>
