--- a/topic01-overview-and-tools/indexmoodle.html
+++ b/topic01-overview-and-tools/indexmoodle.html
@@ -4,9 +4,9 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.css" type="text/css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.js"></script>
     <style>
       
 
@@ -26,10 +26,6 @@ figcaption
   align-items: center;
 }
 
-.credits
-{
-  min-height:20px;
-}
 
 
     </style>
@@ -108,6 +104,24 @@ figcaption
     <div class="content">
       <div class="description">
          <p>Android introduced a new user interface language to the world, one that is gradually evolving in flexibility and expressiveness. Here we review the principle elements of this language and how its is incorporated into attractive and usable applications</p>
+
+      </div>
+    </div>
+  </a>
+
+  
+  
+  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/book-a-lab-01/index.html">
+    <div class="content">
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> Lab-01 </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic01-overview-and-tools/book-a-lab-01/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>Here we discuss how to install and set up effective tools for Android application development. These include the Android Studio IDE  + an emulator. We&#39;ll also create a simple Android App (HelloWorld), and be able to manage it within the Android Studio environment.</p>
 
       </div>
     </div>
