--- a/topic02-ui-design/indexmoodle.html
+++ b/topic02-ui-design/indexmoodle.html
@@ -4,9 +4,9 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.css" type="text/css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.css" type="text/css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.4/semantic.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2/semantic.min.js"></script>
     <style>
       
 
@@ -26,10 +26,6 @@ figcaption
   align-items: center;
 }
 
-.credits
-{
-  min-height:20px;
-}
 
 
     </style>
@@ -72,6 +68,24 @@ figcaption
     <div class="content">
       <div class="description">
          <p>Here we investigate some of the more advanced UI artifacts used in the design of android apps and focus on the android UI guidelines for effective navigation.</p>
+
+      </div>
+    </div>
+  </a>
+
+  
+  
+  <a class="ui raised link card" href="http://ddrohan.github.io/mad-2016/topic02-ui-design/book-b-lab-02/index.html">
+    <div class="content">
+        <div class="right floated meta"> <i class="lab large icon"></i></div>
+        <div class="header"> Lab-02 </div>
+    </div>
+    <div class="image">
+      <img class="ui bordered rounded image" src="http://ddrohan.github.io/mad-2016/topic02-ui-design/book-b-lab-02/img/main.png">
+    </div>
+    <div class="content">
+      <div class="description">
+         <p>In this Lab, you will be required to build the first version of our Donation Case Study App, called <b>Donation.1.0</b>. Here, we will add in a few UI widgets on a single layout and implement some basic event handling.</p>
 
       </div>
     </div>
